Enforcement updates, content and some check answers logic

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -31,7 +31,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "pins/email";
 @import "pins/public-guidance";
 @import "pins/prototype-only";
-
+@import "pins/truncate-comments";
 
 .index {
 	.govuk-accordion__section-toggle {
