--- a/app/views/enforcement/v5/named-on-notice/company-name.html
+++ b/app/views/enforcement/v5/named-on-notice/company-name.html
@@ -3,7 +3,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "What is the company name on the enforcement notice?" %}
+{% set title = "What’s the company name on the notice?" %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
