--- a/app/views/enforcement/v5/named-on-notice/named-on-notice.html
+++ b/app/views/enforcement/v5/named-on-notice/named-on-notice.html
@@ -3,7 +3,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "Who was named on the enforcement notice?" %}
+{% set title = "Who’s named on the enforcement notice?" %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
