--- a/app/views/enforcement/v5/grounds/groundC.html
+++ b/app/views/enforcement/v5/grounds/groundC.html
@@ -28,7 +28,7 @@
       Choose your grounds of appeal
     </span>
 
-    <form method="post">
+    <form action="reasonsC" method="post">
 
       <div class="govuk-form-group">
 
@@ -45,17 +45,21 @@
           You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
         <p>
 
+        <p class="govuk-hint">
+          You can upload documents to support your appeal later.
+        <p>
+
         {% if data['enforcement-reason-method'] == 'text' %}
 
-          <textarea class="govuk-textarea" id="enforcement-ground-c-reasons" name="enforcement-ground-c-reasons" rows="5" aria-describedby="enforcement-ground-c-reasons-hint"></textarea>
+        <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="3000">
+
+          <textarea class="govuk-textarea govuk-js-character-count" id="enforcement-ground-c-reasons" name="enforcement-ground-c-reasons" rows="5" aria-describedby="enforcement-ground-c-reasons-hint"></textarea>
+
+          <div id="enforcement-ground-c-reasons-info" class="govuk-hint govuk-character-count__message">
+            <!-- You can enter up to 3,000 words -->
+          </div>
 
         </div>
-
-        <!-- <p class="govuk-body">
-          <a href="groundC?enforcement-reason-method=file" class="govuk-link">
-            Or upload your reasons in a document
-          </a>
-        </p> -->
 
         {% else %}
 
