--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,7 +41,20 @@ service-start{% extends "layout.html" %}
             <div id="accordion-default-content-guidance" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-guidance">
 
               <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
+                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
+                      text: "WIP"
+                    }) }}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Enforcement statement submission - Version 1
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="/enforcement-statement/v1/appeal-submitted-email">Appeal submitted email</a></li>
+                    </ul>
+                  </div>
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
@@ -155,7 +168,7 @@ service-start{% extends "layout.html" %}
             <div id="accordion-default-content-guidance" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-guidance">
 
               <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
@@ -193,7 +206,7 @@ service-start{% extends "layout.html" %}
             <div id="accordion-default-content-guidance" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-guidance">
 
               <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
@@ -317,7 +330,7 @@ service-start{% extends "layout.html" %}
             <div id="accordion-default-content-appellant" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-appellant">
 
               <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
@@ -430,7 +443,7 @@ service-start{% extends "layout.html" %}
             <div id="accordion-default-content-appellant" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-appellant">
 
               <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
 
                   <!-- version 16 -->
                   <div class="govuk-inset-text govuk-!-margin-top-0">
@@ -815,7 +828,7 @@ service-start{% extends "layout.html" %}
             <div id="accordion-default-content-appellant" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-appellant">
 
               <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
 
                   <p class="govuk-body">
                     Designing a pattern to help users save their progress during an appeal submission and later return to their appeal.
@@ -2813,7 +2826,7 @@ service-start{% extends "layout.html" %}
             <div id="accordion-default-content-appellant" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-appellant">
 
               <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
+                <div class="govuk-grid-column-full">
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
 
