--- a/app/views/index.html
+++ b/app/views/index.html
@@ -59,8 +59,8 @@ service-start{% extends "layout.html" %}
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                      text: "Ready for UR"
+                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
+                      text: "WIP"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
                       BYS version 12 + enforcement version 4
