--- a/app/views/enforcement/v5/check-your-answers.html
+++ b/app/views/enforcement/v5/check-your-answers.html
@@ -672,14 +672,14 @@
           <!-- planning obligation -->
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Do you plan to submit a planning obligation to support your appeal?
+              Do you plan to submit a planning obligation?
             </dt>
             <dd class="govuk-summary-list__value">
               {{ data["enforcement-planning-obligation"] or 'No' }}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="javascript:preventDefault();">
-                Change<span class="govuk-visually-hidden"> do you plan to submit a planning obligation to support your appeal</span>
+                Change<span class="govuk-visually-hidden"> do you plan to submit a planning obligation</span>
               </a>
             </dd>
           </div>
