--- a/app/views/enforcement-statement/v1/appeal-submitted-email.html
+++ b/app/views/enforcement-statement/v1/appeal-submitted-email.html
@@ -24,11 +24,13 @@
         Appeal timeline
       </h2>
       <p>
-        Receive copy of local planning department questionnaire: ((date 2 weeks after the appeal start))
+        Receive copy of local planning authority questionnaire: ((date 2 weeks after the appeal start))
         <br>
-        Statement of case deadlines: ((date 6 weeks after appeal start))
+        Statement of case deadline: ((date 6 weeks after appeal start))
         <br>
         Final comments deadline: ((date 9 weeks after appeal start))
+        <br>
+        Planning obligation: ((date 9 weeks after this letter))
       </p>
 
       <h2 class="govuk-heading-m">
@@ -54,22 +56,24 @@
         What happens next
       </h2>
 
-      <p>((Local planning department) completes a questionnaire about your enforcement notice appeal and submits their case file. They'll forward a copy of this to you, for your information. This should happen in the next week.</p>
+      <p>((Local planning authority)) completes a questionnaire about your enforcement notice appeal and submits their case file. They'll forward a copy of this to you, for your information. This should happen in the next week.</p>
 
       <p>Then the Inspector will begin considering your appeal. We’ll contact you if you need to give the Inspector access during their site visit.</p>
 
-      <p>You can expect a decision xx weeks from the date you submitted your appeal.</p>
+      <p>You can expect a decision 48 weeks from the date you submitted your appeal.</p>
 
       <h2 class="govuk-heading-m">
         What you need to do
       </h2>
-      <p>
-        You can rely on your appeal form and accompanying documents as your full case, however, if you want to make any further representations, these should be sent to us within 6 weeks of the start date. We will copy these further representations to the LPA.
-        <br>
-        ((<a href="return/">url for statement journey</a>))
-      </p>
-      {# <p>You do not need to do anything else at this stage. We have everything we need from you.</p> #}
-      <p>If you contact us about your appeal, you should quote your appeal reference number.</a></p>
+      <p>If you are happy with your appeal, you don’t need to do anything. However, you can change your appeal statement any number of times up to 6 weeks after your appeal start date. You can change your grounds of appeal (except ground A) and add other reasons, comments and documents to support your appeal. These will be shared with your local planning authority. </p>
+
+      <p>If you told us you intend on submitting a planning obligation, send a certified copy to us no later than 9 weeks from the date of this letter. </p>
+
+      <p>You can apply for costs if anyone involved in your appeal behaves unreasonably, for example missing deadlines. Costs can be awarded against you too. </p>
+
+      <p>((<a href="return/">url for statement journey</a>))</p>
+
+      <p>If you contact us about your appeal, you should quote  the appeal site address and post code. </p>
 
       <p>
         <br>
